# individuals

./: AgeDistribution.hpp  CMakeLists.txt  Covid19State.cpp  Covid19State.hpp  Person.hpp  PersonProperty.hpp  Population.hpp  README.md  Rng.hpp  sim.cpp  test_agedist.cpp
